Add all implemented features: appointment management, auth service improvements, HR management updates, and search enhancements