@@ -7,6 +7,7 @@ import com.startica.privateapp.model.User;
 import com.startica.privateapp.repository.CandidateRepository;
 import com.startica.privateapp.opening.repository.OpeningRepository;
 import com.startica.privateapp.repository.UserRepository;
+import jakarta.persistence.criteria.Predicate;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
@@ -30,9 +31,9 @@ public class GlobalSearchService {
      */
     private double parseExperienceString(String expStr) {
         if (expStr == null || expStr.trim().isEmpty()) return 0.0;
-        
+
         String cleaned = expStr.toLowerCase().trim();
-        
+
         // Handle decimal years first (e.g., "2.5 years")
         if (cleaned.matches(".*\\d+\\.\\d+.*")) {
             String decimalStr = cleaned.replaceAll("[^0-9.]", "");
@@ -44,20 +45,20 @@ public class GlobalSearchService {
                 }
             }
         }
-        
+
         // Handle "X years Y months" format
         if (cleaned.contains("year") && cleaned.contains("month")) {
             java.util.regex.Pattern pattern = java.util.regex.Pattern.compile("\\d+(\\.\\d+)?");
             java.util.regex.Matcher matcher = pattern.matcher(cleaned);
-            
+
             double years = 0.0;
             double months = 0.0;
             int count = 0;
-            
+
             while (matcher.find() && count < 2) {
                 String numberStr = matcher.group();
                 double number = Double.parseDouble(numberStr);
-                
+
                 if (count == 0) {
                     years = number;
                 } else {
@@ -65,15 +66,15 @@ public class GlobalSearchService {
                 }
                 count++;
             }
-            
+
             return years + (months / 12.0);
         }
-        
+
         // Handle "X years" format
         if (cleaned.contains("year")) {
             java.util.regex.Pattern pattern = java.util.regex.Pattern.compile("\\d+(\\.\\d+)?");
             java.util.regex.Matcher matcher = pattern.matcher(cleaned);
-            
+
             if (matcher.find()) {
                 String yearStr = matcher.group();
                 if (!yearStr.isEmpty()) {
@@ -81,12 +82,12 @@ public class GlobalSearchService {
                 }
             }
         }
-        
+
         // Handle "X months" format
         if (cleaned.contains("month")) {
             java.util.regex.Pattern pattern = java.util.regex.Pattern.compile("\\d+(\\.\\d+)?");
             java.util.regex.Matcher matcher = pattern.matcher(cleaned);
-            
+
             if (matcher.find()) {
                 String monthStr = matcher.group();
                 if (!monthStr.isEmpty()) {
@@ -94,24 +95,24 @@ public class GlobalSearchService {
                 }
             }
         }
-        
+
         // Handle plain numbers (assume years)
         java.util.regex.Pattern pattern = java.util.regex.Pattern.compile("\\d+(\\.\\d+)?");
         java.util.regex.Matcher matcher = pattern.matcher(cleaned);
-        
+
         if (matcher.find()) {
             String numberStr = matcher.group();
             if (!numberStr.isEmpty()) {
                 return Double.parseDouble(numberStr);
             }
         }
-        
+
         return 0.0;
     }
 
     public GlobalSearchResponse search(GlobalSearchRequest request, User currentUser) {
         long startTime = System.currentTimeMillis();
-        
+
         String query = request.getQuery().toLowerCase();
         Sort sort = getSort(request.getSortBy(), request.getSortDirection());
         PageRequest pageRequest = PageRequest.of(request.getPage(), request.getSize(), sort);
@@ -188,7 +189,7 @@ public class GlobalSearchService {
             String.format("%s %s - %s", candidate.getFirstName(), candidate.getLastName(), candidate.getSkills()),
             query
         );
-        
+
         return GlobalSearchResponse.CandidateSearchResult.builder()
                 .id(candidate.getId())
                 .name(candidate.getFirstName() + " " + candidate.getLastName())
@@ -206,7 +207,7 @@ public class GlobalSearchService {
             String.format("%s - %s", opening.getTitle(), opening.getDepartment()),
             query
         );
-        
+
         return GlobalSearchResponse.JobOpeningSearchResult.builder()
                 .id(opening.getId())
                 .title(opening.getTitle())
@@ -224,7 +225,7 @@ public class GlobalSearchService {
             String.format("%s - %s", user.getFullName(), user.getEmail()),
             query
         );
-        
+
         return GlobalSearchResponse.HRUserSearchResult.builder()
                 .id(user.getId())
                 .name(user.getFullName())
@@ -237,10 +238,10 @@ public class GlobalSearchService {
 
     private String highlightMatch(String text, String query) {
         if (text == null || query == null) return text;
-        
+
         String lowerText = text.toLowerCase();
         String lowerQuery = query.toLowerCase();
-        
+
         int index = lowerText.indexOf(lowerQuery);
         if (index >= 0) {
             String before = text.substring(0, index);
@@ -248,13 +249,13 @@ public class GlobalSearchService {
             String after = text.substring(index + query.length());
             return before + "<mark>" + match + "</mark>" + after;
         }
-        
+
         return text;
     }
 
     private Sort getSort(String sortBy, String sortDirection) {
         Sort.Direction direction = "ASC".equalsIgnoreCase(sortDirection) ? Sort.Direction.ASC : Sort.Direction.DESC;
-        
+
         switch (sortBy) {
             case "date":
                 return Sort.by(direction, "createdAt");
@@ -266,32 +267,32 @@ public class GlobalSearchService {
     }
 
     public java.util.Map<String, Object> advancedCandidateSearch(
-            String query, 
-            java.util.Map<String, Object> filters, 
-            String sortBy, 
-            int page, 
-            int limit, 
+            String query,
+            java.util.Map<String, Object> filters,
+            String sortBy,
+            int page,
+            int limit,
             User currentUser) {
-        
+
         long startTime = System.currentTimeMillis();
-        
+
         try {
             System.out.println("🔍 Advanced Search - Query: " + query + ", Filters: " + filters.keySet());
-            
+
             // Build specifications based on filters
-            org.springframework.data.jpa.domain.Specification<Candidate> spec = 
+            org.springframework.data.jpa.domain.Specification<Candidate> spec =
                 org.springframework.data.jpa.domain.Specification.where(null);
-            
+
             // Apply HR filter for non-admin users
             if (currentUser != null && currentUser.getRole() == com.startica.privateapp.model.Role.HR) {
-                spec = spec.and((root, criteriaQuery, criteriaBuilder) -> 
+                spec = spec.and((root, criteriaQuery, criteriaBuilder) ->
                     criteriaBuilder.equal(root.get("sourceHrId"), currentUser.getId()));
             }
-        
+
             // Apply text query - search across multiple fields
             if (query != null && !query.trim().isEmpty()) {
                 String searchQuery = "%" + query.toLowerCase() + "%";
-                spec = spec.and((root, criteriaQuery, criteriaBuilder) -> 
+                spec = spec.and((root, criteriaQuery, criteriaBuilder) ->
                     criteriaBuilder.or(
                         criteriaBuilder.like(criteriaBuilder.lower(root.get("firstName")), searchQuery),
                         criteriaBuilder.like(criteriaBuilder.lower(root.get("lastName")), searchQuery),
@@ -302,45 +303,28 @@ public class GlobalSearchService {
                         criteriaBuilder.like(criteriaBuilder.lower(root.get("company")), searchQuery)
                     ));
             }
-            
+
             // ============ LOCATION FILTERS ============
-            // Current location filter
-            if (filters.containsKey("currentLocations")) {
-                List<String> locations = (List<String>) filters.get("currentLocations");
+            if (filters.containsKey("locations")) {
+                List<String> locations = (List<String>) filters.get("locations");
                 if (locations != null && !locations.isEmpty()) {
-                    spec = spec.and((root, criteriaQuery, criteriaBuilder) -> {
-                        List<jakarta.persistence.criteria.Predicate> predicates = new java.util.ArrayList<>();
+                    spec = spec.and((root, q, cb) -> {
+                        List<Predicate> preds = new ArrayList<>();
                         for (String loc : locations) {
-                            predicates.add(
-                                criteriaBuilder.like(criteriaBuilder.lower(root.get("location")), "%" + loc.toLowerCase() + "%")
-                            );
+                            preds.add(cb.like(cb.lower(root.get("location")), "%" + loc.toLowerCase() + "%"));
                         }
-                        return criteriaBuilder.or(predicates.toArray(new jakarta.persistence.criteria.Predicate[0]));
+                        return cb.or(preds.toArray(new Predicate[0]));
                     });
                 }
             }
-            
-            // Preferred location - map to location field (since DB doesn't have separate preferred location)
-            if (filters.containsKey("preferredLocations")) {
-                List<String> preferredLocs = (List<String>) filters.get("preferredLocations");
-                if (preferredLocs != null && !preferredLocs.isEmpty()) {
-                    spec = spec.and((root, criteriaQuery, criteriaBuilder) -> {
-                        List<jakarta.persistence.criteria.Predicate> predicates = new java.util.ArrayList<>();
-                        for (String loc : preferredLocs) {
-                            predicates.add(
-                                criteriaBuilder.like(criteriaBuilder.lower(root.get("location")), "%" + loc.toLowerCase() + "%")
-                            );
-                        }
-                        return criteriaBuilder.or(predicates.toArray(new jakarta.persistence.criteria.Predicate[0]));
-                    });
-                }
-            }
-            
+
+
+
             // ============ SKILLS FILTER ============
             if (filters.containsKey("primarySkills")) {
                 List<String> skills = (List<String>) filters.get("primarySkills");
                 String matchType = (String) filters.getOrDefault("skillMatchType", "ANY");
-                
+
                 if (skills != null && !skills.isEmpty()) {
                     spec = spec.and((root, criteriaQuery, criteriaBuilder) -> {
                         if ("ALL".equals(matchType)) {
@@ -365,7 +349,7 @@ public class GlobalSearchService {
                     });
                 }
             }
-            
+
             // Secondary skills filter
             if (filters.containsKey("secondarySkills")) {
                 List<String> secondarySkills = (List<String>) filters.get("secondarySkills");
@@ -381,133 +365,104 @@ public class GlobalSearchService {
                     });
                 }
             }
-            
+
             // ============ EDUCATION FILTERS ============
             // Qualification filter
             if (filters.containsKey("qualification")) {
                 String qualification = (String) filters.get("qualification");
                 if (qualification != null && !qualification.trim().isEmpty()) {
-                    spec = spec.and((root, criteriaQuery, criteriaBuilder) -> 
+                    spec = spec.and((root, criteriaQuery, criteriaBuilder) ->
                         criteriaBuilder.like(criteriaBuilder.lower(root.get("degree")), "%" + qualification.toLowerCase() + "%")
                     );
                 }
             }
-            
+
             // Passing year range filter
-            if (filters.containsKey("minPassingYear") || filters.containsKey("maxPassingYear")) {
-                Integer minYear = filters.containsKey("minPassingYear") ? 
-                    ((Number) filters.get("minPassingYear")).intValue() : null;
-                Integer maxYear = filters.containsKey("maxPassingYear") ? 
-                    ((Number) filters.get("maxPassingYear")).intValue() : null;
-                
-                if (minYear != null || maxYear != null) {
-                    spec = spec.and((root, criteriaQuery, criteriaBuilder) -> {
-                        if (minYear != null && maxYear != null) {
-                            return criteriaBuilder.between(root.get("passingYear"), minYear, maxYear);
-                        } else if (minYear != null) {
-                            return criteriaBuilder.greaterThanOrEqualTo(root.get("passingYear"), minYear);
-                        } else {
-                            return criteriaBuilder.lessThanOrEqualTo(root.get("passingYear"), maxYear);
-                        }
-                    });
-                }
+            if (filters.containsKey("minPassingYear") && filters.containsKey("maxPassingYear")) {
+                Integer minYear = (Integer) filters.get("minPassingYear");
+                Integer maxYear = (Integer) filters.get("maxPassingYear");
+
+                spec = spec.and((root, q, cb) ->
+                        cb.between(root.get("passingYear"), minYear, maxYear)
+                );
             }
-            
+
+
+
             // ============ COMPANY FILTER ============
             if (filters.containsKey("company")) {
                 String company = (String) filters.get("company");
-                if (company != null && !company.trim().isEmpty()) {
-                    spec = spec.and((root, criteriaQuery, criteriaBuilder) -> 
-                        criteriaBuilder.like(criteriaBuilder.lower(root.get("company")), "%" + company.toLowerCase() + "%")
+                if (company != null && !company.isBlank()) {
+                    spec = spec.and((root, q, cb) ->
+                            cb.like(cb.lower(root.get("company")), "%" + company.toLowerCase() + "%")
                     );
                 }
             }
-            
+
+
             // ============ PROFILE FILTER ============
             if (filters.containsKey("profile")) {
                 String profile = (String) filters.get("profile");
-                if (profile != null && !profile.trim().isEmpty()) {
-                    spec = spec.and((root, criteriaQuery, criteriaBuilder) -> 
-                        criteriaBuilder.like(criteriaBuilder.lower(root.get("profile")), "%" + profile.toLowerCase() + "%")
+                if (profile != null && !profile.isBlank()) {
+                    spec = spec.and((root, q, cb) ->
+                            cb.like(cb.lower(root.get("profile")), "%" + profile.toLowerCase() + "%")
                     );
                 }
             }
-            
-            // ============ SPECIALIZATION FILTER ============
-            if (filters.containsKey("specialization")) {
-                String specialization = (String) filters.get("specialization");
-                if (specialization != null && !specialization.trim().isEmpty()) {
-                    spec = spec.and((root, criteriaQuery, criteriaBuilder) -> 
-                        criteriaBuilder.like(criteriaBuilder.lower(root.get("specialization")), "%" + specialization.toLowerCase() + "%")
-                    );
-                }
-            }
-            
+
+
             // ============ STATUS FILTER ============
             if (filters.containsKey("applicationStatus")) {
                 List<String> statuses = (List<String>) filters.get("applicationStatus");
                 if (statuses != null && !statuses.isEmpty()) {
-                    // Convert string status to enum values
-                    List<String> enumStatuses = statuses.stream()
-                        .map(String::toUpperCase)
-                        .collect(java.util.stream.Collectors.toList());
-                    
-                    spec = spec.and((root, criteriaQuery, criteriaBuilder) -> 
-                        root.get("status").as(String.class).in(enumStatuses)
+                    spec = spec.and((root, q, cb) ->
+                            root.get("status").as(String.class).in(statuses)
                     );
                 }
             }
-            
+
+
             // ============ EXPERIENCE LEVEL FILTER ============
             if (filters.containsKey("experienceLevel")) {
-                List<String> experienceLevels = (List<String>) filters.get("experienceLevel");
-                if (experienceLevels != null && !experienceLevels.isEmpty()) {
-                    spec = spec.and((root, criteriaQuery, criteriaBuilder) -> {
-                        List<jakarta.persistence.criteria.Predicate> predicates = new java.util.ArrayList<>();
-                        for (String level : experienceLevels) {
-                            predicates.add(
-                                criteriaBuilder.like(criteriaBuilder.lower(root.get("experienceLevel")), "%" + level.toLowerCase() + "%")
-                            );
+                List<String> levels = (List<String>) filters.get("experienceLevel");
+                if (levels != null && !levels.isEmpty()) {
+                    spec = spec.and((root, query1, cb) -> {
+                        List<Predicate> predicates = new ArrayList<>();
+                        for (String lvl : levels) {
+                            predicates.add(cb.like(cb.lower(root.get("experienceLevel")), "%" + lvl.toLowerCase() + "%"));
                         }
-                        return criteriaBuilder.or(predicates.toArray(new jakarta.persistence.criteria.Predicate[0]));
+                        return cb.or(predicates.toArray(new Predicate[0]));
                     });
                 }
             }
-            
+
+
             // ============ NOTICE PERIOD FILTER ============
             if (filters.containsKey("noticePeriod")) {
-                List<String> noticePeriods = (List<String>) filters.get("noticePeriod");
-                if (noticePeriods != null && !noticePeriods.isEmpty()) {
-                    spec = spec.and((root, criteriaQuery, criteriaBuilder) -> {
-                        List<jakarta.persistence.criteria.Predicate> predicates = new java.util.ArrayList<>();
-                        for (String period : noticePeriods) {
-                            predicates.add(
-                                criteriaBuilder.like(criteriaBuilder.lower(root.get("noticePeriod")), "%" + period.toLowerCase() + "%")
-                            );
+                List<String> periods = (List<String>) filters.get("noticePeriod");
+                if (periods != null && !periods.isEmpty()) {
+                    spec = spec.and((root, query1, cb) -> {
+                        List<Predicate> predicates = new ArrayList<>();
+                        for (String p : periods) {
+                            predicates.add(cb.like(cb.lower(root.get("noticePeriod")), "%" + p.toLowerCase() + "%"));
                         }
-                        return criteriaBuilder.or(predicates.toArray(new jakarta.persistence.criteria.Predicate[0]));
+                        return cb.or(predicates.toArray(new Predicate[0]));
                     });
                 }
             }
-            
+
+
             // ============ DEGREE FILTER ============
             if (filters.containsKey("degree")) {
                 List<String> degrees = (List<String>) filters.get("degree");
                 if (degrees != null && !degrees.isEmpty()) {
-                    spec = spec.and((root, criteriaQuery, criteriaBuilder) -> {
-                        List<jakarta.persistence.criteria.Predicate> predicates = new java.util.ArrayList<>();
-                        for (String degree : degrees) {
-                            // Search in both degree field and education JSON
-                            predicates.add(criteriaBuilder.or(
-                                criteriaBuilder.like(criteriaBuilder.lower(root.get("degree")), "%" + degree.toLowerCase() + "%"),
-                                criteriaBuilder.like(criteriaBuilder.lower(root.get("education")), "%" + degree.toLowerCase() + "%")
-                            ));
-                        }
-                        return criteriaBuilder.or(predicates.toArray(new jakarta.persistence.criteria.Predicate[0]));
-                    });
+                    spec = spec.and((root, q, cb) ->
+                            root.get("degree").in(degrees)
+                    );
                 }
             }
-            
+
+
             // ============ EDUCATION GAP FILTER ============
             if (filters.containsKey("educationGap")) {
                 List<String> educationGaps = (List<String>) filters.get("educationGap");
@@ -516,14 +471,49 @@ public class GlobalSearchService {
                         List<jakarta.persistence.criteria.Predicate> predicates = new java.util.ArrayList<>();
                         for (String gap : educationGaps) {
                             predicates.add(
-                                criteriaBuilder.like(criteriaBuilder.lower(root.get("educationGap")), "%" + gap.toLowerCase() + "%")
+                                criteriaBuilder.like(criteriaBuilder.lower(root.get("gap")), "%" + gap.toLowerCase() + "%")
                             );
                         }
                         return criteriaBuilder.or(predicates.toArray(new jakarta.persistence.criteria.Predicate[0]));
                     });
                 }
             }
-            
+
+            // ============ EMPLOYMENT HISTORY FILTER ============
+            if (filters.containsKey("employmentHistory")) {
+                List<String> historyFilters = (List<String>) filters.get("employmentHistory");
+
+                if (historyFilters != null && !historyFilters.isEmpty()) {
+                    spec = spec.and((root, query1, cb) -> {
+
+                        List<Predicate> predicates = new ArrayList<>();
+
+                        if (historyFilters.contains("yes")) {
+                            // Has employment history (either "yes" or JSON entries)
+                            predicates.add(
+                                    cb.or(
+                                            cb.equal(root.get("employmentHistory"), "yes"),
+                                            cb.and(
+                                                    cb.isNotNull(root.get("employmentHistory")),
+                                                    cb.notEqual(root.get("employmentHistory"), "no"),
+                                                    cb.notEqual(root.get("employmentHistory"), "yes")
+                                            )
+                                    )
+                            );
+                        }
+
+                        if (historyFilters.contains("no")) {
+                            // No employment history
+                            predicates.add(cb.equal(root.get("employmentHistory"), "no"));
+                        }
+
+                        return cb.or(predicates.toArray(new Predicate[0]));
+                    });
+                }
+            }
+
+
+
             // ============ EXTRACT IN-MEMORY FILTER PARAMETERS ============
             // Experience filter - will be applied in-memory due to string storage
             Double targetExp = null;
@@ -531,13 +521,13 @@ public class GlobalSearchService {
                 targetExp = ((Number) filters.get("minExperience")).doubleValue();
             }
             final Double finalTargetExp = targetExp;
-            
+
             // CTC filters - will be applied in-memory due to string storage
             Integer minCurrentCTC = null;
             Integer maxCurrentCTC = null;
             Integer minExpectedCTC = null;
             Integer maxExpectedCTC = null;
-            
+
             if (filters.containsKey("minCurrentCTC")) {
                 minCurrentCTC = ((Number) filters.get("minCurrentCTC")).intValue();
             }
@@ -550,15 +540,15 @@ public class GlobalSearchService {
             if (filters.containsKey("maxExpectedCTC")) {
                 maxExpectedCTC = ((Number) filters.get("maxExpectedCTC")).intValue();
             }
-            
+
             final Integer finalMinCurrentCTC = minCurrentCTC;
             final Integer finalMaxCurrentCTC = maxCurrentCTC;
             final Integer finalMinExpectedCTC = minExpectedCTC;
             final Integer finalMaxExpectedCTC = maxExpectedCTC;
-            
+
             // ============ BUILD SORT ============
             Sort sort = Sort.by(Sort.Direction.DESC, "updatedAt");
-            
+
             if ("latest".equals(sortBy)) {
                 sort = Sort.by(Sort.Direction.DESC, "updatedAt");
             } else if ("experienceHigh".equals(sortBy)) {
@@ -570,24 +560,24 @@ public class GlobalSearchService {
             } else if ("name".equals(sortBy)) {
                 sort = Sort.by(Sort.Direction.ASC, "firstName", "lastName");
             }
-            
+
             // ============ EXECUTE QUERY ============
             // Check if we need in-memory filtering
-            boolean needsInMemoryFiltering = (finalTargetExp != null || 
+            boolean needsInMemoryFiltering = (finalTargetExp != null ||
                            finalMinCurrentCTC != null || finalMaxCurrentCTC != null ||
                            finalMinExpectedCTC != null || finalMaxExpectedCTC != null);
-            
+
             List<Candidate> allFilteredCandidates;
             long totalFiltered;
-            
+
             if (needsInMemoryFiltering) {
                 // Fetch ALL matching candidates for accurate pagination
                 PageRequest allResultsRequest = PageRequest.of(0, Integer.MAX_VALUE, sort);
-                org.springframework.data.domain.Page<Candidate> allResults = 
+                org.springframework.data.domain.Page<Candidate> allResults =
                     candidateRepository.findAll(spec, allResultsRequest);
-                
+
                 System.out.println("📊 Database returned: " + allResults.getContent().size() + " candidates for in-memory filtering");
-                
+
                 // ============ APPLY IN-MEMORY FILTERS ============
                 allFilteredCandidates = allResults.getContent().stream()
                 .filter(candidate -> {
@@ -595,23 +585,16 @@ public class GlobalSearchService {
                     if (finalTargetExp != null) {
                         String expStr = candidate.getExperience();
                         if (expStr == null || expStr.trim().isEmpty()) return false;
-                        
+
                         try {
                             double candidateExp = parseExperienceString(expStr);
-                            
-                            // Use exact matching with very small tolerance for decimal precision
-                            double tolerance = 0.05; // Allow ±0.05 years difference for exact matching
-                            double difference = Math.abs(candidateExp - finalTargetExp);
-                            
-                            System.out.println("Experience Filter: Candidate=" + candidateExp + ", Target=" + finalTargetExp + ", Difference=" + difference + ", Tolerance=" + tolerance);
-                            
-                            if (difference > tolerance) return false;
+                            if (candidateExp < finalTargetExp) return false;
                         } catch (Exception e) {
-                            System.out.println("Error parsing experience: '" + expStr + "' - " + e.getMessage());
-                            // Don't filter out candidates with parsing errors, just log them
+                            return false;
                         }
                     }
-                    
+
+
                     // Current CTC filter
                     if (finalMinCurrentCTC != null || finalMaxCurrentCTC != null) {
                         String ctcStr = candidate.getCurrentPackage();
@@ -628,7 +611,7 @@ public class GlobalSearchService {
                             }
                         }
                     }
-                    
+
                     // Expected CTC filter
                     if (finalMinExpectedCTC != null || finalMaxExpectedCTC != null) {
                         String expectedStr = candidate.getExpectedCTC();
@@ -645,43 +628,43 @@ public class GlobalSearchService {
                             }
                         }
                     }
-                    
+
                     return true;
                 })
-                .collect(java.util.stream.Collectors.toList());
-                
+                 .collect(java.util.stream.Collectors.toList());
+
                 totalFiltered = allFilteredCandidates.size();
-                
+
                 // Apply pagination for in-memory filtered results
                 int skipCount = (page - 1) * limit;
                 System.out.println("📄 In-memory Pagination: page=" + page + ", limit=" + limit + ", skipCount=" + skipCount + ", totalFiltered=" + totalFiltered);
-                
+
                 List<Candidate> paginatedCandidates = allFilteredCandidates.stream()
                     .skip(skipCount)
                     .limit(limit)
                     .collect(java.util.stream.Collectors.toList());
-                    
+
                 allFilteredCandidates = paginatedCandidates;
             } else {
                 // No in-memory filtering needed - use database pagination directly
                 PageRequest pageRequest = PageRequest.of(page - 1, limit, sort);
-                org.springframework.data.domain.Page<Candidate> resultPage = 
+                org.springframework.data.domain.Page<Candidate> resultPage =
                     candidateRepository.findAll(spec, pageRequest);
-                
+
                 System.out.println("📊 Database pagination: page=" + page + ", limit=" + limit + ", returned=" + resultPage.getContent().size() + ", total=" + resultPage.getTotalElements());
-                
+
                 allFilteredCandidates = resultPage.getContent();
                 totalFiltered = resultPage.getTotalElements();
             }
-            
+
             int totalPagesCalc = (int) Math.ceil((double) totalFiltered / limit);
             System.out.println("✅ Results: Showing " + allFilteredCandidates.size() + " candidates on page " + page + " of " + totalPagesCalc + " total pages");
-            
+
             // ============ MAP RESULTS ============
             List<java.util.Map<String, Object>> results = allFilteredCandidates.stream()
                 .map(this::mapCandidateToMap)
                 .collect(java.util.stream.Collectors.toList());
-            
+
             // ============ BUILD RESPONSE ============
             java.util.Map<String, Object> response = new java.util.HashMap<>();
             response.put("results", results);
@@ -689,14 +672,14 @@ public class GlobalSearchService {
             response.put("page", page);
             response.put("totalPages", Math.max(1, totalPagesCalc));
             response.put("executionTime", System.currentTimeMillis() - startTime);
-            
+
             System.out.println("⏱️  Search completed in " + (System.currentTimeMillis() - startTime) + "ms");
-            
+
             return response;
         } catch (Exception e) {
             System.err.println("Error in advancedCandidateSearch: " + e.getMessage());
             e.printStackTrace();
-            
+
             // Return empty results on error
             java.util.Map<String, Object> errorResponse = new java.util.HashMap<>();
             errorResponse.put("results", new java.util.ArrayList<>());
@@ -705,11 +688,11 @@ public class GlobalSearchService {
             errorResponse.put("totalPages", 0);
             errorResponse.put("error", e.getMessage());
             errorResponse.put("executionTime", System.currentTimeMillis() - startTime);
-            
+
             return errorResponse;
         }
     }
-    
+
     private java.util.Map<String, Object> mapCandidateToMap(Candidate candidate) {
         java.util.Map<String, Object> map = new java.util.HashMap<>();
         map.put("id", candidate.getId());
@@ -719,13 +702,33 @@ public class GlobalSearchService {
         map.put("phone", candidate.getPhone());
         map.put("profile", candidate.getProfile());
         map.put("company", candidate.getCompany());
-        map.put("experience", candidate.getExperience());
+
+        // 🔹 EXPERIENCE
+        map.put("experience", candidate.getExperience()); // old string years
+        map.put("experienceLevel", candidate.getExperienceLevel()); // ✅ REQUIRED
+
+        // 🔹 SALARY
         map.put("currentPackage", candidate.getCurrentPackage());
         map.put("expectedCTC", candidate.getExpectedCTC());
+
+        // 🔹 LOCATION & NOTICE
         map.put("location", candidate.getLocation());
-        map.put("noticePeriod", ""); // Field doesn't exist in Candidate model
+        map.put("noticePeriod", candidate.getNoticePeriod()); // ✅ FIXED
+
+        // Skills
         map.put("primarySkills", candidate.getSkills());
+
+        // 🔹 EDUCATION
+        map.put("education", candidate.getEducation()); // JSON field
+        map.put("degree", candidate.getDegree());       // fallback column
+        map.put("passingYear", candidate.getPassingYear());
+
+        // 🔹 GAP
+        map.put("gap", candidate.getGap()); // ✅ FIXED
+
+        // 🔹 STATUS
         map.put("status", candidate.getStatus() != null ? candidate.getStatus().toString() : "PENDING");
+        
         map.put("isVerified", false); // Field doesn't exist in Candidate model
         map.put("updatedAt", candidate.getUpdatedAt());
         return map;
